--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,7 @@ torch/share/
 torch/test/
 torch/utils/benchmark/utils/valgrind_wrapper/callgrind.h
 torch/utils/benchmark/utils/valgrind_wrapper/valgrind.h
+torch/utils_backport/
 torch/version.py
 # Root level file used in CI to specify certain env configs.
 # E.g., see .circleci/config.yaml
