--- a/mypy-strict.ini
+++ b/mypy-strict.ini
@@ -39,6 +39,7 @@ files = tools/codegen/gen.py,
     tools/autograd/load_derivatives.py,
     torch/utils/benchmark/utils/common.py,
     torch/utils/benchmark/utils/timer.py,
+    torch/utils/benchmark/utils/historic/*.py,
     torch/utils/benchmark/utils/valgrind_wrapper/*.py,
     torch/utils/_pytree.py
 
